--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.1",
+    "next": "^12.1.5",
     "react-router-dom": "^6.3.0",
     "todomvc-app-css": "^2.0.0",
     "todomvc-common": "^1.0.0"
