--- a/package.json
+++ b/package.json
@@ -1,38 +1,39 @@
 {
-  "name": "react-scratch-sample",
+  "name": "testtodolist",
   "version": "1.0.0",
-  "description": "",
-  "main": "main.js",
+  "description": "> Template used for creating [TodoMVC](http://todomvc.com) apps",
+  "main": "babel.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --open --mode development --hot",
-    "build": "webpack --mode production"
+    "start": "webpack-dev-server --open",
+    "build": "webpack"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/NandkumarNam/TestTodoList.git"
+  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "private": true,
-  "dependencies": {
+  "bugs": {
+    "url": "https://github.com/NandkumarNam/TestTodoList/issues"
+  },
+  "homepage": "https://github.com/NandkumarNam/TestTodoList#readme",
+  "devDependencies": {
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.1",
-    "next": "^12.1.5",
-    "react-router-dom": "^6.3.0",
-    "todomvc-app-css": "^2.0.0",
-    "todomvc-common": "^1.0.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.17.9",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
-    "babel-loader": "^8.2.4",
+    "awesome-typescript-loader": "^5.2.1",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "mini-css-extract-plugin": "^2.6.0",
+    "source-map-loader": "^3.0.1",
     "style-loader": "^3.3.1",
-    "ts-loader": "^9.2.8",
     "typescript": "^4.6.3",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.8.1"
+  },
+  "dependencies": {
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   }
 }
