--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "babel.config.js",
   "scripts": {
     "start": "webpack-dev-server --open",
+    "test": "jest",
     "build": "webpack"
   },
   "repository": {
@@ -33,7 +34,11 @@
     "webpack-dev-server": "^4.8.1"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.1.1",
+    "jest": "^27.5.1",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "ts-jest": "^27.1.4"
   }
 }
